fixed the overflow bug

--- a/src/notes/NoteNavbar.css
+++ b/src/notes/NoteNavbar.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
+/* body{
   overflow: hidden;
-}
+} */
 .sidebar{
   position: fixed;
   top: 0;
